--- a/app/src/main/res/drawable/bg_design.xml
+++ b/app/src/main/res/drawable/bg_design.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
+
+    <!-- ===== APP BACKGROUND GRADIENT ============================ -->
+
     <gradient
-            android:startColor="@color/gradient_start"
-            android:centerColor="@color/gradient_center"
-            android:endColor="@color/gradient_end"
+            android:startColor="@color/neutral_700"
+            android:centerColor="@color/neutral_800"
+            android:endColor="@color/neutral_900"
             android:angle="270" />
+
 </shape>
