--- a/app/src/main/res/drawable/img_design.xml
+++ b/app/src/main/res/drawable/img_design.xml
@@ -2,10 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
 
-    <!-- Transparent upptill, skugga nertill -->
+    <!-- ===== IMAGE SHADOW / GRADIENT ============================ -->
+
     <gradient
             android:startColor="@android:color/transparent"
-            android:endColor="@color/image_shadow_color"
+            android:endColor="@color/shadow_soft"
             android:angle="90" />
 
 </shape>
