--- a/app/src/main/res/values/styles_btn.xml
+++ b/app/src/main/res/values/styles_btn.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MenuButtonStyle">
+
+    <!-- ===== MENU BUTTON STYLE ================================ -->
+    <style name="MenuBtnStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
 
-        <!-- background drawable -->
+        <!-- background -->
         <item name="android:background">@drawable/btn_design</item>
 
-        <!-- Turn off Material's purple tint -->
+        <!-- remove default tint -->
         <item name="backgroundTint">@null</item>
 
-        <!-- outer margin (spacing around the button) -->
-        <item name="android:layout_marginStart">@dimen/button_margin_horizontal</item>
-        <item name="android:layout_marginEnd">@dimen/button_margin_horizontal</item>
-        <item name="android:layout_marginBottom">@dimen/button_margin_bottom</item>
+        <!-- outer margin -->
+        <item name="android:layout_marginStart">@dimen/margin_m</item>
+        <item name="android:layout_marginEnd">@dimen/margin_m</item>
+        <item name="android:layout_marginBottom">@dimen/margin_s</item>
 
         <!-- inner padding -->
-        <item name="android:paddingTop">@dimen/button_padding_vertical</item>
-        <item name="android:paddingBottom">@dimen/button_padding_vertical</item>
+        <item name="android:paddingTop">@dimen/padding_s</item>
+        <item name="android:paddingBottom">@dimen/padding_s</item>
 
         <!-- text -->
-        <item name="android:textColor">@color/menu_title_color</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">@dimen/text_m</item>
     </style>
 
-    <style name="BackButtonStyle" parent="MenuButtonStyle">
-        <item name="android:textSize">14sp</item>
-        <item name="android:paddingVertical">@dimen/spacing_xs</item>
-        <item name="android:layout_marginTop">@dimen/margin_small</item>
-        <item name="android:textColor">@color/menu_title_color</item>
-
+    <!-- ===== BACK BUTTON STYLE ================================ -->
+    <style name="BackBtnStyle" parent="MenuBtnStyle">
+        <item name="android:textSize">@dimen/text_s</item>
+        <item name="android:paddingVertical">@dimen/padding_xs</item>
+        <item name="android:layout_marginTop">@dimen/margin_s</item>
+        <item name="android:textColor">@color/text_primary</item>
     </style>
 
 </resources>
