--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main"
+        android:id="@+id/home_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_design"
         android:orientation="vertical"
         android:gravity="top"
-        tools:context=".MainActivity">
+        tools:context=".HomeActivity">
 
     <!-- ===== HERO SECTION ==================================== -->
     <FrameLayout
