--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,6 +29,17 @@
                 android:layout_height="match_parent"
                 android:background="@color/overlay_20" />
 
+        <ImageButton
+                android:id="@+id/btn_info"
+                android:layout_width="@dimen/size_touch"
+                android:layout_height="@dimen/size_touch"
+                android:layout_gravity="top|end"
+                android:layout_margin="@dimen/margin_s"
+                android:background="@android:color/transparent"
+                android:padding="@dimen/padding_xs"
+                android:src="@drawable/ic_info"
+                android:contentDescription="@string/desc_info_icon" />
+
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
