--- a/app/src/main/res/values/styles_btn.xml
+++ b/app/src/main/res/values/styles_btn.xml
@@ -7,7 +7,7 @@
         <item name="android:layout_height">wrap_content</item>
 
         <!-- background -->
-        <item name="android:background">@drawable/btn_design</item>
+        <item name="android:background">@color/neutral_600</item>
 
         <!-- remove default tint -->
         <item name="backgroundTint">@null</item>
