--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -89,10 +89,11 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_recycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:padding="@dimen/padding_m"
             android:clipToPadding="false"
-            tools:listitem="@layout/card_container" />
+            tools:listitem="@layout/card_menu_container" />
 
     <Button
             android:id="@+id/btn_open_menu"
