--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/menu_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="@string/menu_title"
             android:textColor="@color/text_primary"
-            android:textSize="@dimen/text_l"
+            android:textSize="@dimen/text_xl"
             android:gravity="center"
             android:layout_marginBottom="@dimen/margin_m" />
 
@@ -23,9 +24,10 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/menu_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:clipToPadding="false"
-            android:paddingBottom="@dimen/padding_l"
-            tools:listitem="@layout/card_container" />
+            android:paddingBottom="@dimen/padding_m"
+            tools:listitem="@layout/card_menu_container" />
 
 </LinearLayout>
